--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <p>hello world</p>
+  <div class="box">
+    <h4 class="box-text">Favourite Movie Franchise</h4>
+    <div class="inner-box">
+      <h4>lala alal alal </h4>
+    </div>
+  </div>
 </body>
 <script src="script.js"></script>
 </html>
