updated css file with some changes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
 </head>
 <body>
   <div class="box">
-    <h4 class="box-text">Favourite Movie Franchise</h4>
-    <div class="inner-box">
-      <h4>lala alal alal </h4>
+    <div class="box_text">
+      <h4>Favourite Movie Franchise</h4>
+    </div>
+    <div class="inner-box1">
+      <h4>Jawan</h4>
+    </div>
+    <div class="inner-box2">
+      <h4>Jawan</h4>
+    </div>
+    <div class="inner-box3">
+      <h4>Jawan</h4>
+    </div>
+    <div class="inner-box4">
+      <h4>Jawan</h4>
+    </div>
+    <div class="inner-box5">
+      <h4>Jawan</h4>
+    </div>
+    <div class="inner-box5">
+      <h4>Jawan</h4>
     </div>
   </div>
 </body>
