completed css work

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
       <h4>Jawan</h4>
     </div>
     <div class="inner-box2">
-      <h4>Jawan</h4>
+      <h4>Salaar</h4>
     </div>
     <div class="inner-box3">
-      <h4>Jawan</h4>
+      <h4>Merry Christmas</h4>
     </div>
     <div class="inner-box4">
-      <h4>Jawan</h4>
+      <h4>12th Fail</h4>
     </div>
     <div class="inner-box5">
-      <h4>Jawan</h4>
+      <h4>Lift</h4>
     </div>
     <div class="inner-box5">
-      <h4>Jawan</h4>
+      <h4>Freddy</h4>
     </div>
   </div>
 </body>
