started working on the project

--- a/index.html
+++ b/index.html
@@ -3,33 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Doms_manipulation</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Restaurant</title>
 </head>
 <body>
-  <div class="box">
-    <div class="box_text">
-      <h4>Favourite Movie Franchise</h4>
-    </div>
-    <div class="inner-box1">
-      <h4>Jawan</h4>
-    </div>
-    <div class="inner-box2">
-      <h4>Salaar</h4>
-    </div>
-    <div class="inner-box3">
-      <h4>Merry Christmas</h4>
-    </div>
-    <div class="inner-box4">
-      <h4>12th Fail</h4>
-    </div>
-    <div class="inner-box5">
-      <h4>Lift</h4>
-    </div>
-    <div class="inner-box5">
-      <h4>Freddy</h4>
-    </div>
-  </div>
-  <script src="script.js"></script>
+  
 </body>
 </html>
